Part3/STtoKVScript/genKVScript/KVScriptGrammerParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/takuumi/Projects/StudyANTLR/Part3/STtoKVScript/KVScriptGrammer.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class KVScriptGrammerParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		DEFINE=1, COLON=2, EQUAL=3, PLUS=4, MINUS=5, ASTERISK=6, SLASH=7, NEWLINE=8, 
		IDENTIFIER=9, SEPARATOR=10;
	public const int
		RULE_input = 0, RULE_oneline = 1, RULE_kvlang = 2, RULE_expr = 3, RULE_define = 4, 
		RULE_linecomment = 5;
	public static readonly string[] ruleNames = {
		"input", "oneline", "kvlang", "expr", "define", "linecomment"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "':'", "'='", "'+'", "'-'", "'*'", "'/'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "DEFINE", "COLON", "EQUAL", "PLUS", "MINUS", "ASTERISK", "SLASH", 
		"NEWLINE", "IDENTIFIER", "SEPARATOR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "KVScriptGrammer.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static KVScriptGrammerParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public KVScriptGrammerParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public KVScriptGrammerParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class InputContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(KVScriptGrammerParser.Eof, 0); }
		public ITerminalNode[] NEWLINE() { return GetTokens(KVScriptGrammerParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(KVScriptGrammerParser.NEWLINE, i);
		}
		public OnelineContext[] oneline() {
			return GetRuleContexts<OnelineContext>();
		}
		public OnelineContext oneline(int i) {
			return GetRuleContext<OnelineContext>(i);
		}
		public InputContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_input; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKVScriptGrammerVisitor<TResult> typedVisitor = visitor as IKVScriptGrammerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInput(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InputContext input() {
		InputContext _localctx = new InputContext(Context, State);
		EnterRule(_localctx, 0, RULE_input);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 18;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 13;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if (_la==SLASH || _la==IDENTIFIER) {
						{
						State = 12; oneline();
						}
					}

					State = 15; Match(NEWLINE);
					}
					} 
				}
				State = 20;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			State = 22;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SLASH || _la==IDENTIFIER) {
				{
				State = 21; oneline();
				}
			}

			State = 24; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OnelineContext : ParserRuleContext {
		public KvlangContext kvlang() {
			return GetRuleContext<KvlangContext>(0);
		}
		public LinecommentContext linecomment() {
			return GetRuleContext<LinecommentContext>(0);
		}
		public OnelineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_oneline; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKVScriptGrammerVisitor<TResult> typedVisitor = visitor as IKVScriptGrammerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOneline(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OnelineContext oneline() {
		OnelineContext _localctx = new OnelineContext(Context, State);
		EnterRule(_localctx, 2, RULE_oneline);
		try {
			State = 28;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 26; kvlang();
				}
				break;
			case SLASH:
				EnterOuterAlt(_localctx, 2);
				{
				State = 27; linecomment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class KvlangContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(KVScriptGrammerParser.IDENTIFIER, 0); }
		public ITerminalNode DEFINE() { return GetToken(KVScriptGrammerParser.DEFINE, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public KvlangContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_kvlang; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKVScriptGrammerVisitor<TResult> typedVisitor = visitor as IKVScriptGrammerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitKvlang(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public KvlangContext kvlang() {
		KvlangContext _localctx = new KvlangContext(Context, State);
		EnterRule(_localctx, 4, RULE_kvlang);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 30; Match(IDENTIFIER);
			State = 31; Match(DEFINE);
			State = 32; expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
	 
		public ExprContext() { }
		public virtual void CopyFrom(ExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Expr_defineContext : ExprContext {
		public DefineContext define() {
			return GetRuleContext<DefineContext>(0);
		}
		public Expr_defineContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKVScriptGrammerVisitor<TResult> typedVisitor = visitor as IKVScriptGrammerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr_define(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Expr_additiveContext : ExprContext {
		public ExprContext lhs;
		public ExprContext rhs;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode PLUS() { return GetToken(KVScriptGrammerParser.PLUS, 0); }
		public ITerminalNode MINUS() { return GetToken(KVScriptGrammerParser.MINUS, 0); }
		public Expr_additiveContext(ExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKVScriptGrammerVisitor<TResult> typedVisitor = visitor as IKVScriptGrammerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr_additive(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		return expr(0);
	}

	private ExprContext expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExprContext _localctx = new ExprContext(Context, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new Expr_defineContext(_localctx);
			Context = _localctx;
			_prevctx = _localctx;

			State = 35; define();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 42;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Expr_additiveContext(new ExprContext(_parentctx, _parentState));
					((Expr_additiveContext)_localctx).lhs = _prevctx;
					PushNewRecursionContext(_localctx, _startState, RULE_expr);
					State = 37;
					if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
					State = 38;
					_la = TokenStream.LA(1);
					if ( !(_la==PLUS || _la==MINUS) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					State = 39; ((Expr_additiveContext)_localctx).rhs = expr(2);
					}
					} 
				}
				State = 44;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class DefineContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(KVScriptGrammerParser.IDENTIFIER, 0); }
		public DefineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_define; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKVScriptGrammerVisitor<TResult> typedVisitor = visitor as IKVScriptGrammerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefineContext define() {
		DefineContext _localctx = new DefineContext(Context, State);
		EnterRule(_localctx, 8, RULE_define);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45; Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LinecommentContext : ParserRuleContext {
		public ITerminalNode[] SLASH() { return GetTokens(KVScriptGrammerParser.SLASH); }
		public ITerminalNode SLASH(int i) {
			return GetToken(KVScriptGrammerParser.SLASH, i);
		}
		public ITerminalNode[] NEWLINE() { return GetTokens(KVScriptGrammerParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(KVScriptGrammerParser.NEWLINE, i);
		}
		public LinecommentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_linecomment; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKVScriptGrammerVisitor<TResult> typedVisitor = visitor as IKVScriptGrammerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLinecomment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LinecommentContext linecomment() {
		LinecommentContext _localctx = new LinecommentContext(Context, State);
		EnterRule(_localctx, 10, RULE_linecomment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47; Match(SLASH);
			State = 48; Match(SLASH);
			State = 52;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DEFINE) | (1L << COLON) | (1L << EQUAL) | (1L << PLUS) | (1L << MINUS) | (1L << ASTERISK) | (1L << SLASH) | (1L << IDENTIFIER) | (1L << SEPARATOR))) != 0)) {
				{
				{
				State = 49;
				_la = TokenStream.LA(1);
				if ( _la <= 0 || (_la==NEWLINE) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				}
				State = 54;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public override bool Sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 3: return expr_sempred((ExprContext)_localctx, predIndex);
		}
		return true;
	}
	private bool expr_sempred(ExprContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0: return Precpred(Context, 1);
		}
		return true;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
